# Compute-on-GPU

./: .gitignore  CMakeLists.txt  README.MD  conanfile.txt  main.cpp  requirements.txt
benchmarking/: CMakeLists.txt  benchmark.cpp
include/: ocl.hpp
kernels/: bitonic.cl  bitonic_localmem.cl  bitonic_suffering.cl
sources/: CMakeLists.txt  bitonic.py  bitonic_cpu.cpp
tests/: CMakeLists.txt  invoker.cpp  invoker.hpp
tests/test_folder/: test_generator.py
